{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "03707897-c778-4dec-b77e-ea11a88a8358",
            "actions": [
                {
                    "name": "MouseRotate",
                    "type": "Button",
                    "id": "6a0c8f17-d2aa-4a7c-b4a1-a5eaedf12d57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyRotate",
                    "type": "Value",
                    "id": "d3d1905e-988f-43cc-9ae8-c0871b83f307",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a334e75-19d5-4506-8c59-7f0cb48f8839",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ArrowKeys",
                    "id": "8546f1f0-1304-4a8e-b132-28927d146ecc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyRotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "f921bb03-93b7-4057-b402-ded7caae7b3f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "592c3d8d-a568-42b2-9b2f-03763376a5ae",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}